emart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emart-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - emart.bhanu5125.shop
    secretName: emart-tls   # cert-manager will create & store TLS cert here

  rules:
  - host: emart.bhanu5125.shop
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nodeapi-service
            port:
              number: 5000

      - path: /webapi
        pathType: Prefix
        backend:
          service:
            name: javaapi-service
            port:
              number: 9000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 4200
